# sync-JEPA

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
configs/: __init__.py  default.yaml
data/: install.sh
src/pyplatez/: cli.py
src/syncJEPA/: ajepa.py  eval.py  prep.py  train.py
